# marketlab

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  amplify.yml  bl-esw-pinbar-market-lab-cdx.pine  bl-esw-pinbar-market-lab-pro-cc.pine  bl-esw-pinbar-market-lab-pro-osc-cc.pine  bl-esw-pinbar-market-lab.pine  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
.github/workflows/: ci.yml  refresh-market-data.yml
.husky/: pre-commit
docs/: README.md  bounded-context-map.md  formula-understanding-audit.md  optimization-handoff-cc.md
docs/development/: README.md  architecture.md  contributing.md  data-pipeline.md  domain-boundaries.md  formula-and-planning.md  glossary.md  quality-gates.md  release-gitflow.md  troubleshooting.md  viewmodel-ui.md
docs/formula-evidence/: README.md  academic-sources.md  chart-coverage.md  evidence-catalog.md  formula-inventory.md  formula-reference.md  implementation-roadmap.md  pine-alignment.md  (+2 more)
scripts/: chart_formula_audit.py  check-data-index.mjs  check-dist-data.mjs  check-domain-boundaries.mjs  check-file-size.mjs  check-generated-data.mjs  convert-stocks-xlsx.mjs  csv2js.mjs  fetch-lp-onchain-data.mjs  fetch-lp-pool-aggregate.mjs  fetch-market-data.py  formula_audit.py  formula_inventory_audit.py  formula_wiring_audit.py  generate-recommended-pool.mjs  render-recommended-pool-page.mjs  requirements-market-data.txt  source_coverage_audit.py  verify-domain.mjs  verify-pine-cdx.ps1  verify-pine-equivalence.mjs  verify-pine.mjs  verify-pine.ps1
src/: App.vue  main.js
(+634 files in other folders)
